# ChangeLog for net-im/kadu-powerkadu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-powerkadu-2.0.1.ebuild:
  Removed cruft.

  31 Mar 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-powerkadu-2.0.3.ebuild:
  Bumped
