@@ -1,3 +1,5 @@
 DIST kadu-powerkadu-2.0.3.tar.bz2 21274 RMD160 7d9dd5b56fb5ee3d694cce0d03416bb5e2c63810 SHA1 c561a24c13a34c2fdf5c776e992efb4c07ed30cf SHA256 33d142d45375d3584b7a24cd4d1c524808c328c224fb467b7d916bb6bec7952c
+DIST kadu-powerkadu-2.0.4.tar.bz2 21225 RMD160 c82de7debe084d1534c1f3c0be1e6cdbdae61fc2 SHA1 358f7131ade4ea214e3cc7cfce094d74676ba1ab SHA256 374be83c525a80e4769d3ddce5c8d3c1d79272cc78d71b80cab29d542aabd8b7
 EBUILD kadu-powerkadu-2.0.3.ebuild 448 RMD160 9b023b982c4b02f862a40076b4592de91d65b771 SHA1 59b13ea246855a520a1bea26d5272cb55dc20077 SHA256 d8d5b9125943051ecc03b0fbfe265a472911bb1f1525aa46d2bf4f8f6ef0f129
-MISC ChangeLog 312 RMD160 bd7f7fdf667fb744ac76b089ed23f9f53b8c31cd SHA1 4bca66e0cb00ef90489db0dc7786baba4023f42f SHA256 4524fc72c5d6dbbe24684f9bd7290abcbc1919c663b171a4305f74bdfa83d6b8
+EBUILD kadu-powerkadu-2.0.4.ebuild 448 RMD160 9b023b982c4b02f862a40076b4592de91d65b771 SHA1 59b13ea246855a520a1bea26d5272cb55dc20077 SHA256 d8d5b9125943051ecc03b0fbfe265a472911bb1f1525aa46d2bf4f8f6ef0f129
+MISC ChangeLog 404 RMD160 5059ae208bb2ac57ee84802bd2fb356714e152f0 SHA1 9f5f8fe262f2091253eccf044dfd937b45e51dbb SHA256 1e0103b13a21eace5d40e5110c31c9b814b30afd8be1eee7e92cef5eba96de5d
