@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
+  +kadu-powerkadu-2.0.4.ebuild:
+  Bumped.
+
   20 May 2008; Michał Ziąbkowski <mziab@o2.pl>
   -kadu-powerkadu-2.0.1.ebuild:
   Removed cruft.
